# lore

./: .gitignore  CHANGELOG.md  CREDITS.md  Lore.spec  README.md  USER_GUIDE.md  build_installer.sh  pyproject.toml  validation_results.json
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml  release.yml
docs/: Scope.md
docs/backlog/: prefetch-models.md
docs/research-papers/: A PyQT6 Blueprint for Oral History Transcription_ Integrating Low-Latency Playback, Responsive Waveforms, and Format-Agnostic Sync.md  A Two-Stage Strategy for Efficient Backchannel Detection_ Integrating High-Precision Rules with Lightweight Models in CPU-Only Workflows.md  AI Integration Feasibility Study_ Lore.md  Backchannel Detection and Classification Research.md  Beyond Subtitles_ Why OHMS XML is Essential for Institutional Oral History Deposits Over WebVTT.md  Beyond the Feasibility Check_ A Framework for Integrating Local-First Features into Lore Under Strict Resource Constraints.md  CPU Active Speaker Detection Research.md  Engineering a Resilient Oral History Transcription Pipeline_ A Guide to CPU-Optimized Faster-Whisper, Silero-VAD, and PyQt6 Integration.md  Enhancing Oral History Diarization_ A Decision Framework for Integrating CPU-Friendly Audio-Visual Active Speaker Detection.md  Evaluating pyannote-audio 3.x for Lore_ A Feasibility Analysis of Licensing Friction, Accuracy, and Lightweight Alternatives.md  Faster-Whisper and Silero-VAD Integration.md  Feasibility and Implementation of Offline NLLB Translation in Lore_ A Technical Blueprint for Low-Resource Language Support.md  Feasibility of a PyTorch-Free, Local RAG Pipeline for Lore_ An Analysis of FastEmbed, sqlite-vec, and Pre-Embedded Taxonomies.md  From Logprobs to ONNX_ A Feasibility Roadmap for Offline AI in Lore on Consumer Hardware.md  From Python Script to Zero-Dependency Executable_ A PyInstaller Blueprint for Lore’s CPU-Optimized, Sub-400MB Transcription App.md  Gap Durations Over Overlap Flags_ A Minimalist Approach to Improving Local LLM Summarization with Timing Data.md  Lightweight Flagging, Full Attribution Later_ An Incremental Strategy for Overlapping Speech Diarization in CPU-Constrained Lore Applications.md  Lore_ AI Feature Feasibility Analysis.md  NLLB-200 Translation for Lore.md  Oral History Metadata Standards Research.md  Overlap Detection in Diarization Pipelines.md  Prosody Extraction for Oral History.md  RAG Lore Domain Auto-Tagging Research.md  Researching Lore Project Phase 2.md  Timing-Enriched LLM Summarization Research.md  (+1 more)
scripts/: evaluate_nllb.py  validate_diarization.py
src/: main.py
src/audio/: player.py  (+1 more)
tests/: conftest.py  test_bagit.py  test_clustering.py  test_e2e_workflow.py  test_embedding.py  test_global_search.py  test_model_manager.py  test_ohms_export.py  test_overlap_detector.py  test_overlap_diarization.py  test_overlap_model.py  test_overlap_strip.py  test_signal_chain.py  test_transcription_smoke.py  test_vad.py
(+50 files in other folders)
