[project]
name = "lore-ai"
version = "0.1.6"
description = "Privacy-first, local-only oral history transcription."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Mark Bouck", email = "your@email.com" }
]
keywords = ["oral-history", "transcription", "whisper", "archival", "offline"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "faster-whisper",
    "PyQt6",
    "imageio-ffmpeg",
    "platformdirs",
    "lxml",
    "numpy",
    "tsdownsample",
    "pyannote-audio==3.3.2",
    "resemblyzer>=0.1.4",
    "gliner2-onnx>=0.1.1",
    "llama-cpp-python>=0.3.25",
    "sqlite-vec>=0.1.9",
    "fastembed>=0.8.0",
    "cryptography>=42.0",
    "scikit-learn>=1.3",
    "onnxruntime>=1.17",
    "ctranslate2>=4.0",
    "transformers>=4.40",
    "huggingface-hub>=0.22",
    "keyring>=25.0",
]

[project.urls]
Homepage = "https://github.com/mabo-du/lore"
Documentation = "https://github.com/mabo-du/lore/blob/main/USER_GUIDE.md"
Repository = "https://github.com/mabo-du/lore.git"
"Issue Tracker" = "https://github.com/mabo-du/lore/issues"

[project.optional-dependencies]
diarization = []

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
lore = "main:main"

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 88
target-version = "py312"

[dependency-groups]
dev = [
    "pyinstaller>=6.20.0",
    "pytest-qt>=4.4",
    "pytest-mock>=3.12",
]
